--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,8 @@
     "react-portal-overlay": "^1.0.1",
     "react-scripts": "3.4.3",
     "resize-observer-polyfill": "^1.5.1",
-    "rodal": "^1.8.1"
+    "rodal": "^1.8.1",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
