--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.1.1",
+    "@emotion/styled": "^11.0.0",
+    "@projectstorm/react-diagrams": "^6.0.1-beta.7",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.8.9",
+    "@react-navigation/stack": "^5.12.6",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "apollo-boost": "^0.4.9",
+    "axios": "^0.21.0",
+    "closest": "0.0.1",
+    "dagre": "^0.8.5",
+    "graphql": "^15.4.0",
+    "graphql-tag": "^2.11.0",
+    "lodash": "^4.17.20",
+    "pathfinding": "^0.4.18",
+    "paths-js": "^0.4.11",
     "react": "^16.14.0",
+    "react-apollo": "^3.1.5",
     "react-dom": "^16.14.0",
-    "react-scripts": "3.4.3"
+    "react-native-gesture-handler": "^1.8.0",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^2.15.0",
+    "react-portal-overlay": "^1.0.1",
+    "react-scripts": "3.4.3",
+    "resize-observer-polyfill": "^1.5.1",
+    "rodal": "^1.8.1",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
