--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react": "^16.14.0",
     "react-apollo": "^3.1.5",
     "react-dom": "^16.14.0",
+    "react-google-login": "^5.1.25",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
